[package]
name = "sws"
version = "0.1.0"
authors = ["Romain Leroux <romain@leroux.dev>"]
edition = "2018"

[dependencies]
anyhow = "1"
crossbeam-channel = "0.5"
csv = "1"
flate2 = "1"
futures = "0.3"
lazy_static = "1"
reqwest = "0.11"
select = "0.5.0"
serde = { version = "1", features = ["derive"] }
structopt = "0.3"
sxd-document = "0.3"
sxd-xpath = "0.4"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
