[package]
name = "sws"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "3", features = ["derive"] }
clap_complete = "3"
# csv = "1"
# serde = { version = "1", features = ["derive"] }
# serde_json = "1"
sws-crawler = { path = "../sws-crawler" }
sws-lua = { path = "../sws-lua" }
tokio = { version = "1", features = ["full"] }
