[package]
name = "sws"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
clap = { version = "3", features = ["derive"] }
clap_complete = "3"
env_logger = "0.9"
reqwest = { version = "0.11", features = ["blocking"] }
serde_yaml = "0.8"
sws-crawler = { path = "../sws-crawler", features = ["clap"] }
sws-lua = { path = "../sws-lua" }
tempfile = "3"
tokio = { version = "1", features = ["full"] }
