[package]
name = "sws"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
env_logger = "0.9"
num_cpus = "1"
reqwest = { version = "0.11", features = ["blocking"] }
sws-crawler = { path = "../sws-crawler", features = ["clap"] }
sws-lua = { path = "../sws-lua" }
tokio = { version = "1", features = ["rt-multi-thread"] }
