[package]
name = "sws-lua"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
crossbeam-channel = "0.5"
csv = "1"
glob = "0.3"
log = "0.4"
mlua = { version = "0.7", features = ["luajit", "vendored", "serialize"] }
once_cell = "1"
serde = { version = "1", features = ["derive"] }
sws-crawler = { path = "../sws-crawler" }
sws-scraper = { path = "../sws-scraper" }
tokio = { version = "1", default-features = false, features = ["sync"] }